# dotzo-rs

./: Cargo.toml  Dockerfile  README.md  run-dotzo-test-env  rustfmt.toml
src/: dotzo.rs  main.rs  mapping.rs
src/action/: directory_creator.rs  make_link.rs  mod.rs
src/app/: cli.rs  dotzo.rs  logging.rs  mod.rs  types.rs
src/components/: actions.rs  dotzo.rs  linker.rs  mod.rs
src/components/dotzo/: checks.rs  types.rs
src/components/environment/: checks.rs  configs.rs  home.rs  inference.rs  mod.rs  types.rs
src/components/environment/checks/: home.rs  mod.rs  structure.rs  tree.rs
src/components/linker/: link.rs  mod.rs  reconciliation.rs  types.rs
src/components/repo/: directory.rs  mod.rs  tree.rs  types.rs
src/components/repo/checks/: structure.rs
src/components/validation/: containment.rs  directory.rs
src/config/: file.rs  mod.rs
src/config/rc/: types.rs
src/config/spec/: mod.rs  translate.rs  types.rs
src/tasks/: info.rs  init.rs  mod.rs  run.rs  sync.rs
src/util/: actions.rs  checks.rs  dir.rs  fs.rs  mod.rs  prompting.rs
src/util/actions/: dry.rs  mod.rs  standard.rs  testing.rs  types.rs
src/validation/: containment.rs  directory.rs  mod.rs
