[package]
name = "dotzo-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive", "env"] }
clap-verbosity-flag = "3.0.2"
colored = "3.0.0"
derive_more = { version = "1.0.0", features = ["full"] }
dirs = "6.0.0"
fern = { version = "0.7.1", features = ["colored"] }
glob = "0.3.2"
indoc = "2.0.5"
inquire = "0.7.5"
log = "0.4.25"
ntest = "0.9.3"
relative-path = { version = "1.9.3", features = ["serde"] }
same-file = "1.0.6"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
thiserror = "2.0.11"
toml = "0.8.19"
walkdir = "2.5.0"
